# environment-monitor

./: .clang-format  CMakeLists.txt  README.md  build.bash
.github/workflows/: main.yml
cmake/: pico-sdk.cmake
include/: environment-monitor.hpp
src/: main.cpp  utilities.cpp  utilities.hpp
src/connectivity/: connection-status.cpp  connection-status.hpp  constants.hpp  mqtt.hpp  wifi-connection.cpp  wifi-connection.hpp  wireless.hpp
src/connectivity/detail/: communication.hpp  lwipopts.h  wifi-state.hpp
src/connectivity/dns/: resolver.cpp  resolver.hpp
src/connectivity/lwip/: lwipopts.h
src/connectivity/mqtt/: client.cpp  client.hpp
src/connectivity/wireless/: connection-status.cpp  wifi-connection.cpp  wifi-connection.hpp
src/logging/: logger.cpp  logger.hpp
src/sensors/: battery.cpp  battery.hpp  board.cpp  board.hpp  constants.hpp  dht.cpp  dht.hpp  lipo-shim.cpp  lipo-shim.hpp
